--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 /.github            export-ignore
 /examples           export-ignore
+/tests              export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /phpunit.xml        export-ignore
